group-chat login FE

--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup Page</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="./chat.css"
 </head>
 <body>
@@ -13,17 +13,17 @@
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <h3>Signup Now</h3>
+                        <h3>Login</h3>
                         <form id="form" method="POST">
-                                <label>Username</label><input class="form-control" type="text" id="name" name ="name" required><br><br><br>
+                                
                                 <label>Email</label><input class="form-control" type="email" id="email" name="email" required><br><br><br>
-                                <label>Phone Number</label><input class="form-control" type="number" id="ph-no" name="ph-no" required><br><br><br>
-                                <label>Password</label><input id="pass" class="form-control" type="password" id="name" 
-                                name="pass" required><br><br><br>
+                               
+                                <label>Password</label><input id="pass" class="form-control" type="password" id="name" name="pass" required><br><br><br>
                                 <!-- <button type="submit" id="submit">Signup</button> -->
-                                <input type="submit" value="submit" id="submit">
-                                <h2 id="redirect">Already a user? <a href='./login.html'>Login</a></h2>
-                                <ul id="signup-notification"></ul>
+                                <input type="submit" value="Login" id="submit">
+                                <h2 id="redirect">Not a user? <a href='./signup.html'>Sign UP Here</a></h2>
+
+                                <ul id="login-notification"></ul>
                             </form>
                     </div>
                 </div>
