storing and retrieving msgs from LS

--- a/public/login.html
+++ b/public/login.html
@@ -18,19 +18,19 @@
                                 
                                 <label>Email</label><input class="form-control" type="email" id="email" name="email" required><br><br><br>
                                
-                                <label>Password</label><input id="pass" class="form-control" type="password" id="name" name="pass" required><br><br><br>
-                                <!-- <button type="submit" id="submit">Signup</button> -->
-                                <input type="submit" value="Login" id="submit">
+                                <label>Password</label><input id="pass" class="form-control" type="password" id="pass" name="password" required><br><br><br>
+                                <button id="submit">Login</button>
+                                <!-- <input type="submit" value="Login" id="submit"> -->
                                 <h2 id="redirect">Not a user? <a href='./signup.html'>Sign UP Here</a></h2>
 
-                                <ul id="login-notification"></ul>
+                                <ul id="notification"></ul>
                             </form>
                     </div>
                 </div>
             </div>
         </div>
     </div> 
-    <script src="./signup.js"></script>
+    <script src="./login.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.0/axios.min.js" integrity="sha512-OdkysyYNjK4CZHgB+dkw9xQp66hZ9TLqmS2vXaBrftfyJeduVhyy1cOfoxiKdi4/bfgpco6REu6Rb+V2oVIRWg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>                        
 </body>
 </html>
