--- a/public/signup.html
+++ b/public/signup.html
@@ -23,7 +23,7 @@
                                 <!-- <button type="submit" id="submit">Signup</button> -->
                                 <input type="submit" value="submit" id="submit">
                                 <h2 id="redirect">Already a user? <a href='./login.html'>Login</a></h2>
-                                <ul id="signup-notification"></ul>
+                                <ul id="notification"></ul>
                             </form>
                     </div>
                 </div>
